Stop footer from covering content

--- a/client/src/style.css
+++ b/client/src/style.css
@@ -6,6 +6,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: pink;
+  padding-bottom: 120px;
 }
 
 code {
